--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -252,12 +252,12 @@ a:focus {
     padding-top: 100px;
 }
 
-.ourwork-section {
+.download-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../img/ourwork-bg.jpg) no-repeat center center scroll;
-    background-color: #339900;
+    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+    background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -275,7 +275,7 @@ a:focus {
         padding-top: 250px;
     }
 
-    .ourwork-section {
+    .download-section {
         padding: 100px 0;
     }
 
